; ModuleID = '/home/carl/AnghaBench/openssl/crypto/lhash/extr_lh_stats.c_OPENSSL_LH_node_usage_stats.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/lhash/extr_lh_stats.c_OPENSSL_LH_node_usage_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BIO_NOCLOSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @OPENSSL_LH_node_usage_stats(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = call i32 (...) @BIO_s_file()
  %7 = call i32* @BIO_new(i32 %6)
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %21

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* @BIO_NOCLOSE, align 4
  %15 = call i32 @BIO_set_fp(i32* %12, i32* %13, i32 %14)
  %16 = load i32*, i32** %3, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @OPENSSL_LH_node_usage_stats_bio(i32* %16, i32* %17)
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @BIO_free(i32* %19)
  br label %21

21:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32* @BIO_new(i32) #1

declare dso_local i32 @BIO_s_file(...) #1

declare dso_local i32 @BIO_set_fp(i32*, i32*, i32) #1

declare dso_local i32 @OPENSSL_LH_node_usage_stats_bio(i32*, i32*) #1

declare dso_local i32 @BIO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
